config/network-policy/allow-controller-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-controller-egress
  namespace: system
  labels:
    app.kubernetes.io/name: virt-import
    app.kubernetes.io/managed-by: kustomize
    kubevirt.io: virt-import-allow-controller-egress
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: virt-import
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 6443
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
