config/network-policy/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: system
  labels:
    app.kubernetes.io/name: virt-import
    app.kubernetes.io/managed-by: kustomize
    kubevirt.io: virt-import-deny-all
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: virt-import
  policyTypes:
    - Ingress
    - Egress
